load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "rational",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"]),
    deps = [
        "@boost//libs/config",
        "@boost//libs/type_traits",
        "@boost//libs/utility",
        "@boost//libs/throw_exception",
        "@boost//libs/static_assert",
        "@boost//libs/integer",
    ],
)
